Updating names, slightly changing quests, removing compendium, adding constructs armoury, and rats is being weird

--- a/.minecraft/resources/contenttweaker/lang/en_us.lang
+++ b/.minecraft/resources/contenttweaker/lang/en_us.lang
@@ -1,2 +1,2 @@
-item.contenttweaker.cardBlank.name=Blank Card
-item.contenttweaker.cardFool.name=Fool Card
+item.contenttweaker.cardBlank.name=The Blank Card
+item.contenttweaker.cardFool.name=The Fool Card
